--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
             - g++-8
             - python3
             - python3-pip
+            - python3-setuptools
 
       env:
         - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && GCOV=gcov-8"
@@ -24,15 +25,16 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-5.0
+            - llvm-toolchain-trusty-7
           packages:
             - g++-8
-            - clang-5.0
+            - clang-7.0
             - python3
             - python3-pip
+            - python3-setuptools
 
       env:
-        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0 && GCOV='llvm-cov gcov'"
+        - MATRIX_EVAL="CC=clang-7.0 && CXX=clang++-7.0 && GCOV='llvm-cov gcov'"
 
 
 
@@ -47,7 +49,7 @@ install:
   - pip3 install --user meson
 
 script:
-  - meson  build
+  - meson -Db_coverage=true build
   - ninja -C build
   - ninja -C build test
 
