--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,23 @@
 language: cpp
 sudo: false
-dist: xenial
+dist: bionic
 
 matrix:
   include:
     - os: linux
-      compiler: gcc-8
+      compiler: gcc-9
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-8
+            - g++-9
             - python3
             - python3-pip
             - python3-setuptools
 
       env:
-        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && GCOV=gcov-8"
+        - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9 && GCOV=gcov-9"
 
     - os: linux
       compiler: clang-7
@@ -25,16 +25,16 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-7
+            - llvm-toolchain-trusty-8
           packages:
-            - g++-8
-            - clang-7
+            - g++-9
+            - clang-8
             - python3
             - python3-pip
             - python3-setuptools
 
       env:
-        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7 && GCOV='llvm-cov gcov'"
+        - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8 && GCOV='llvm-cov gcov'"
 
 
 
@@ -47,13 +47,13 @@ before_install:
 
 install:
   - pip3 install --user meson
+  - pip3 install --user codecov
 
 script:
   - meson -Db_coverage=true -Db_sanitize=address,undefined build
   - ninja -C build
   - ninja -C build test
+  - codecov
 
 after_success:
-  - if [ "$COVERAGE" == "1" ]; then
-      bash <(curl -s https://codecov.io/bash) -x $GCOV;
-    fi
+  - bash <(curl -s https://codecov.io/bash) -x $GCOV
