--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,23 @@
 language: cpp
 sudo: false
-dist: bionic
+dist: xenial
 
 matrix:
   include:
     - os: linux
-      compiler: gcc-9
+      compiler: gcc-8
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-9
+            - g++-8
             - python3
             - python3-pip
             - python3-setuptools
 
       env:
-        - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9 && GCOV=gcov-9"
+        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && GCOV=gcov-8"
 
     - os: linux
       compiler: clang-7
@@ -27,7 +27,7 @@ matrix:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-trusty-8
           packages:
-            - g++-9
+            - g++-8
             - clang-8
             - python3
             - python3-pip
