--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,22 @@ matrix:
         - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && GCOV=gcov-8"
 
     - os: linux
-      compiler: clang-7
+      compiler: gcc-9
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-9
+            - python3
+            - python3-pip
+            - python3-setuptools
+
+      env:
+        - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9 && GCOV=gcov-9"
+
+    - os: linux
+      compiler: clang-8
       addons:
         apt:
           sources:
@@ -36,7 +51,22 @@ matrix:
       env:
         - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8 && GCOV='llvm-cov gcov'"
 
+    - os: linux
+      compiler: clang-7
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-7
+          packages:
+            - g++-7
+            - clang-7
+            - python3
+            - python3-pip
+            - python3-setuptools
 
+      env:
+        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7 && GCOV='llvm-cov gcov'"
 
 before_install:
   - mkdir -p ~/.local/bin
