--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ arch:
   - amd64
   - arm64
 
+# AMD64 Builds
 matrix:
   include:
     - os: linux
       compiler: gcc-8
+      arch: amd64
       addons:
         apt:
           sources:
@@ -25,6 +27,7 @@ matrix:
 
     - os: linux
       compiler: gcc-9
+      arch: amd64
       addons:
         apt:
           sources:
@@ -40,6 +43,7 @@ matrix:
 
     - os: linux
       compiler: clang-8
+      arch: amd64
       addons:
         apt:
           sources:
@@ -57,6 +61,75 @@ matrix:
 
     - os: linux
       compiler: clang-7
+      arch: amd64
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-xenial-7
+          packages:
+            - g++-7
+            - clang-7
+            - python3
+            - python3-pip
+            - python3-setuptools
+
+      env:
+        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7 && GCOV='llvm-cov gcov'"
+# ARM64 Builds
+    - os: linux
+      compiler: gcc-8
+      arch: arm64
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-8
+            - python3
+            - python3-pip
+            - python3-setuptools
+
+      env:
+        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8 && GCOV=gcov-8"
+
+    - os: linux
+      compiler: gcc-9
+      arch: arm64
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-9
+            - python3
+            - python3-pip
+            - python3-setuptools
+
+      env:
+        - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9 && GCOV=gcov-9"
+
+    - os: linux
+      compiler: clang-8
+      arch: arm64
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-xenial-8
+          packages:
+            - g++-8
+            - clang-8
+            - python3
+            - python3-pip
+            - python3-setuptools
+
+      env:
+        - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8 && GCOV='llvm-cov gcov'"
+
+    - os: linux
+      compiler: clang-7
+      arch: arm64
       addons:
         apt:
           sources:
@@ -76,8 +149,12 @@ before_install:
   - mkdir -p ~/.local/bin
   - eval "${MATRIX_EVAL}"
   - eval "PATH=$PATH:~/.local/bin"
-  - curl -LO https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-linux.zip
-  - unzip ninja-linux.zip -d ~/.local/bin
+  - pushd /tmp
+  - git git@github.com:ninja-build/ninja.git
+  - cd ninja
+  - python3 ./configure.py --bootstrap
+  - cp ninja ~/.local/bin/
+  - popd
 
 install:
   - pip3 install --user wheel
