--- a/.travis.yml
+++ b/.travis.yml
@@ -146,7 +146,7 @@ before_install:
   - eval "${MATRIX_EVAL}"
   - eval "PATH=$PATH:~/.local/bin"
   - pushd /tmp
-  - git git@github.com:ninja-build/ninja.git
+  - git clone git@github.com:ninja-build/ninja.git
   - cd ninja
   - python3 ./configure.py --bootstrap
   - cp ninja ~/.local/bin/
