--- a/.travis.yml
+++ b/.travis.yml
@@ -105,41 +105,42 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9 && GCOV=gcov-9"
 
-    - os: linux
-      compiler: clang-8
-      arch: arm64
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-xenial-8
-          packages:
-            - g++-8
-            - clang-8
-            - python3
-            - python3-pip
-            - python3-setuptools
+    # Clang on arm is not a thing apparently
+    # - os: linux
+    #   compiler: clang-8
+    #   arch: arm64
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - ubuntu-toolchain-r-test
+    #         - llvm-toolchain-xenial-8
+    #       packages:
+    #         - g++-8
+    #         - clang-8
+    #         - python3
+    #         - python3-pip
+    #         - python3-setuptools
 
-      env:
-        - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8 && GCOV='llvm-cov gcov'"
+    #   env:
+    #     - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8 && GCOV='llvm-cov gcov'"
 
-    - os: linux
-      compiler: clang-7
-      arch: arm64
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-xenial-7
-          packages:
-            - g++-7
-            - clang-7
-            - python3
-            - python3-pip
-            - python3-setuptools
+    # - os: linux
+    #   compiler: clang-7
+    #   arch: arm64
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - ubuntu-toolchain-r-test
+    #         - llvm-toolchain-xenial-7
+    #       packages:
+    #         - g++-7
+    #         - clang-7
+    #         - python3
+    #         - python3-pip
+    #         - python3-setuptools
 
-      env:
-        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7 && GCOV='llvm-cov gcov'"
+    #   env:
+    #     - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7 && GCOV='llvm-cov gcov'"
 
 before_install:
   - mkdir -p ~/.local/bin
