--- a/.travis.yml
+++ b/.travis.yml
@@ -99,6 +99,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
+            - pkg-config
             - g++-8
             - python3
             - python3-pip
@@ -115,6 +116,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
+            - pkg-config
             - g++-9
             - python3
             - python3-pip
