--- a/.travis.yml
+++ b/.travis.yml
@@ -99,6 +99,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
+            - zlib
             - pkg-config
             - g++-8
             - python3
@@ -116,6 +117,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
+            - zlib
             - pkg-config
             - g++-9
             - python3
