--- a/.travis.yml
+++ b/.travis.yml
@@ -99,7 +99,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - zlib
+            - zlib1g-dev
             - pkg-config
             - g++-8
             - python3
@@ -117,7 +117,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - zlib
+            - zlib1g-dev
             - pkg-config
             - g++-9
             - python3
