--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
       addons:
         apt:
           sources:
-            - ubuntu-toolchain-r-test
+            - ppa:ubuntu-toolchain-r/test
           packages:
             - g++-8
             - python3
@@ -27,7 +27,7 @@ matrix:
       addons:
         apt:
           sources:
-            - ubuntu-toolchain-r-test
+            - ppa:ubuntu-toolchain-r/test
           packages:
             - g++-9
             - python3
@@ -43,7 +43,7 @@ matrix:
     #   addons:
     #     apt:
     #       sources:
-    #         - ubuntu-toolchain-r-test
+    #         - ppa:ubuntu-toolchain-r/test
     #         - llvm-toolchain-bionic-9
     #       packages:
     #         - g++-9
@@ -61,7 +61,7 @@ matrix:
       addons:
         apt:
           sources:
-            - ubuntu-toolchain-r-test
+            - ppa:ubuntu-toolchain-r/test
             - llvm-toolchain-bionic-8
           packages:
             - g++-8
@@ -79,7 +79,7 @@ matrix:
       addons:
         apt:
           sources:
-            - ubuntu-toolchain-r-test
+            - ppa:ubuntu-toolchain-r/test
             - llvm-toolchain-bionic-7
           packages:
             - g++-7
