Added tests for the Utilities, not everything is under test as of  yet. Also added the `extract_flags` method to return a vector of flags from a given input.

--- a/meson.build
+++ b/meson.build
@@ -62,6 +62,8 @@ test_srcs = [
 	'src/tests/test-pe.cc',
 	'src/tests/test-xcoff.cc',
 	'src/tests/test-zlib.cc',
+	'src/tests/test-utility.cc',
+
 ]
 
 obj_srcs = [
